--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.63a26457.svg" />
+    <link rel="icon" type="image/svg+xml" href="/day1-work/assets/favicon.63a26457.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.f6cbf4dc.js"></script>
-    <link rel="stylesheet" href="/assets/index.458f9883.css">
+    <script type="module" crossorigin src="/day1-work/assets/index.f6cbf4dc.js"></script>
+    <link rel="stylesheet" href="/day1-work/assets/index.458f9883.css">
   </head>
   <body>
     <div id="root"></div>
